--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="header_right">
         <div class="icon_right">
-            <i class="fa-solid fa-cart-shopping"></i>
+          <i class="fa-solid fa-cart-shopping"></i>
         </div>
         <div class="line"></div>
         <div class="icon_right">
@@ -56,7 +56,7 @@
         </li>
         <li class="list_item list_item_container">
           Jewelry for men
-          <div class="list_item_select">
+          <div class="list_item_select--formen">
             <ul class="select_list">
               <li class="select_item">1</li>
               <li class="select_item">2</li>
@@ -64,20 +64,42 @@
               <li class="select_item">4</li>
             </ul>
             <ul class="select_list">
-                <li class="select_item">5</li>
-                <li class="select_item">6</li>
-                <li class="select_item">7</li>
-                <li class="select_item">8</li>
+              <li class="select_item">5</li>
+              <li class="select_item">6</li>
+              <li class="select_item">7</li>
+              <li class="select_item">8</li>
             </ul>
             <ul class="select_list">
-                <li class="select_item">9</li>
-                <li class="select_item">10</li>
-                <li class="select_item">11</li>
-                <li class="select_item">12123123131</li>
+              <li class="select_item">9</li>
+              <li class="select_item">10</li>
+              <li class="select_item">11</li>
+              <li class="select_item">12123123131</li>
             </ul>
           </div>
         </li>
-        <li class="list_item">Jewelry for women</li>
+        <li class="list_item list_item_container">
+          Jewelry for women
+          <div class="list_item_select--forwomen">
+            <ul class="select_list">
+              <li class="select_item">1</li>
+              <li class="select_item">2</li>
+              <li class="select_item">3</li>
+              <li class="select_item">4</li>
+            </ul>
+            <ul class="select_list">
+              <li class="select_item">5</li>
+              <li class="select_item">6</li>
+              <li class="select_item">7</li>
+              <li class="select_item">8</li>
+            </ul>
+            <ul class="select_list">
+              <li class="select_item">9</li>
+              <li class="select_item">10</li>
+              <li class="select_item">11</li>
+              <li class="select_item">12</li>
+            </ul>
+          </div>
+        </li>
         <li class="list_item">Gift</li>
         <li class="list_item">Blog</li>
         <li class="list_item">Discount</li>
@@ -86,5 +108,60 @@
         </li>
       </ul>
     </nav>
+    <section>
+      <!-- banner -->
+      <div class="banner">
+        <img src="./assets/img/slider_1.webp" alt="" />
+        <div class="arrow arrow--left">
+          <i class="fa-solid fa-angles-left"></i>
+        </div>
+        <div class="arrow arrow--right">
+          <i class="fa-solid fa-angles-right"></i>
+        </div>
+      </div>
+    </section>
+
+    <section class="service">
+      <section class="container1">
+        <div class="pic_service1">
+          <img src="./assets/img/service_about_1.webp" alt="" />
+        </div>
+        <div class="pic_service2">
+          <img src="./assets/img/service_about_2.webp" alt="" />
+          <h2>
+            Đeo trang sức là cách thể hiện bạn mà không cần một lời nói nào
+          </h2>
+          <p>
+            Cuộc đời đó có bao lâu mà hững hờ, hãy cứ đeo trang sức như chưa
+            từng được đeo.
+          </p>
+        </div>
+      </section>
+      <div class="slogan">
+        “Wearing jewelry is the way to express who you are... without saying a
+        word."
+      </div>
+
+      <section class="container2">
+        <div class="service3">
+          <img src="./assets/img/hinhlacbac1.jpg" alt="" />
+        </div>
+        <div class="service3">
+          <img src="./assets/img/hinhlacbac2.jpg" alt="" />
+        </div>
+        <div class="service3">
+          <img src="./assets/img/hinhlacbac3.jpg" alt="" />
+        </div>
+        <div class="service3_arrow service3_arrow_left">
+          <i class="fa-solid fa-chevron-left"></i>
+        </div>
+        <div class="service3_arrow service3_arrow_right">
+          <i class="fa-solid fa-chevron-right"></i>
+        </div>
+        
+      </section>
+    </section>
+
+    <!-- footer -->
   </body>
 </html>
