--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
         </div>
       </section>
       <div class="slogan">
-        “Wearing jewelry is the way to express who you are... without saying a
-        word."
+        <img src="#" alt="" />
       </div>
 
       <section class="container2">
@@ -152,13 +151,87 @@
         <div class="service3">
           <img src="./assets/img/hinhlacbac3.jpg" alt="" />
         </div>
-        <div class="service3_arrow service3_arrow_left">
+        <div class="service_arrow service3_arrow_left">
           <i class="fa-solid fa-chevron-left"></i>
         </div>
-        <div class="service3_arrow service3_arrow_right">
+        <div class="service_arrow service3_arrow_right">
           <i class="fa-solid fa-chevron-right"></i>
         </div>
-        
+      </section>
+
+      <section class="container3">
+        <h2>TRANG SỨC BẠC THÀNH LẬP TỪ 2022</h2>
+        <div class="service4_item">
+          <div class="pic_service4_left">
+            <img src="./assets/img/TRANGSUCBACS2.webp" alt="" />
+            <img src="./assets/img/TRANGSUCBAC2S2.webp" alt="" />
+          </div>
+          <div class="pic_service4_right">
+            <img src="./assets/img/TRANGSUCBAC3S2.webp" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <div class="body_line"></div>
+
+      <section class="container4">
+        <h2>BEST SELLER</h2>
+        <div class="service5_item">
+          <div class="pic_service5">
+            <img src="./assets/img/lacbac1s3.webp" alt="" />
+            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="pic_service5_item">590.000₫</div>
+            <div class="pic_service5_item_detail">
+              <div class="pic_service5_item_detail--heart">
+                <i class="fa-solid fa-heart"> </i>
+              </div>
+              <div class="pic_service5_item_detail--shop">
+                <i class="fa-solid fa-cart-shopping"> </i>
+              </div>
+              <div class="pic_service5_item_detail--plus">
+                <i class="fa-solid fa-magnifying-glass-plus"> </i>
+              </div>
+            </div>
+          </div>
+          < <div class="pic_service5">
+            <img src="./assets/img/lacbac2s3.webp" alt="" />
+            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="pic_service5_item">590.000₫</div>
+            <div class="pic_service5_item_detail">
+              <div class="pic_service5_item_detail--heart">
+                <i class="fa-solid fa-heart"> </i>
+              </div>
+              <div class="pic_service5_item_detail--shop">
+                <i class="fa-solid fa-cart-shopping"> </i>
+              </div>
+              <div class="pic_service5_item_detail--plus">
+                <i class="fa-solid fa-magnifying-glass-plus"> </i>
+              </div>
+            </div>
+          </div>
+          <div class="pic_service5">
+            <img src="./assets/img/lacbac4s3.webp" alt="" />
+            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="pic_service5_item">590.000₫</div>
+            <div class="pic_service5_item_detail">
+              <div class="pic_service5_item_detail--heart">
+                <i class="fa-solid fa-heart"> </i>
+              </div>
+              <div class="pic_service5_item_detail--shop">
+                <i class="fa-solid fa-cart-shopping"> </i>
+              </div>
+              <div class="pic_service5_item_detail--plus">
+                <i class="fa-solid fa-magnifying-glass-plus"> </i>
+              </div>
+            </div>
+          </div>
+          <div class="service_arrow service3_arrow_left">
+            <i class="fa-solid fa-chevron-left"></i>
+          </div>
+          <div class="service_arrow service3_arrow_right">
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+        </div>
       </section>
     </section>
 
