--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <!-- nav -->
     <nav>
       <ul class="nav_list">
-        <li class="list_item">
+        <li class="nav_item">
           <a href="#"> Home </a>
         </li>
-        <li class="list_item list_item_container">
+        <li class="nav_item nav_item_container">
           Jewelry for men
-          <div class="list_item_select--formen">
+          <div class="nav_item_select--formen">
             <ul class="select_list">
               <li class="select_item">1</li>
               <li class="select_item">2</li>
@@ -77,9 +77,9 @@
             </ul>
           </div>
         </li>
-        <li class="list_item list_item_container">
+        <li class="nav_item nav_item_container">
           Jewelry for women
-          <div class="list_item_select--forwomen">
+          <div class="nav_item_select--forwomen">
             <ul class="select_list">
               <li class="select_item">1</li>
               <li class="select_item">2</li>
@@ -100,10 +100,10 @@
             </ul>
           </div>
         </li>
-        <li class="list_item">Gift</li>
-        <li class="list_item">Blog</li>
-        <li class="list_item">Discount</li>
-        <li class="list_item">
+        <li class="nav_item">Gift</li>
+        <li class="nav_item">Blog</li>
+        <li class="nav_item">Discount</li>
+        <li class="nav_item">
           <input type="text" placeholder="Search" />
         </li>
       </ul>
@@ -121,12 +121,12 @@
       </div>
     </section>
 
-    <section class="service">
-      <section class="container1">
-        <div class="pic_service1">
+    <section class="container">
+      <section class="service">
+        <div class="pic_service_first">
           <img src="./assets/img/service_about_1.webp" alt="" />
         </div>
-        <div class="pic_service2">
+        <div class="pic_service_second">
           <img src="./assets/img/service_about_2.webp" alt="" />
           <h2>
             Đeo trang sức là cách thể hiện bạn mà không cần một lời nói nào
@@ -142,31 +142,31 @@
       </div>
 
       <section class="container2">
-        <div class="service3">
+        <div class="service2">
           <img src="./assets/img/hinhlacbac1.jpg" alt="" />
         </div>
-        <div class="service3">
+        <div class="service2">
           <img src="./assets/img/hinhlacbac2.jpg" alt="" />
         </div>
-        <div class="service3">
+        <div class="service2">
           <img src="./assets/img/hinhlacbac3.jpg" alt="" />
         </div>
-        <div class="service_arrow service3_arrow_left">
+        <div class="service2_arrow service2_arrow_left">
           <i class="fa-solid fa-chevron-left"></i>
         </div>
-        <div class="service_arrow service3_arrow_right">
+        <div class="service2_arrow service2_arrow_right">
           <i class="fa-solid fa-chevron-right"></i>
         </div>
       </section>
 
       <section class="container3">
         <h2>TRANG SỨC BẠC THÀNH LẬP TỪ 2022</h2>
-        <div class="service4_item">
-          <div class="pic_service4_left">
+        <div class="container3_item">
+          <div class="pic_service3_left">
             <img src="./assets/img/TRANGSUCBACS2.webp" alt="" />
             <img src="./assets/img/TRANGSUCBAC2S2.webp" alt="" />
           </div>
-          <div class="pic_service4_right">
+          <div class="pic_service3_right">
             <img src="./assets/img/TRANGSUCBAC3S2.webp" alt="" />
           </div>
         </div>
@@ -176,59 +176,59 @@
 
       <section class="container4">
         <h2>BEST SELLER</h2>
-        <div class="service5_item">
-          <div class="pic_service5">
+        <div class="container4_item">
+          <div class="service4">
             <img src="./assets/img/lacbac1s3.webp" alt="" />
-            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="pic_service5_item">590.000₫</div>
-            <div class="pic_service5_item_detail">
-              <div class="pic_service5_item_detail--heart">
+            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="service4_item">590.000₫</div>
+            <div class="service4_item_detail">
+              <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
               </div>
-              <div class="pic_service5_item_detail--shop">
+              <div class="service4_item_detail--shop">
                 <i class="fa-solid fa-cart-shopping"> </i>
               </div>
-              <div class="pic_service5_item_detail--plus">
+              <div class="service4_item_detail--plus">
                 <i class="fa-solid fa-magnifying-glass-plus"> </i>
               </div>
             </div>
           </div>
-          < <div class="pic_service5">
+          < <div class="service4">
             <img src="./assets/img/lacbac2s3.webp" alt="" />
-            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="pic_service5_item">590.000₫</div>
-            <div class="pic_service5_item_detail">
-              <div class="pic_service5_item_detail--heart">
+            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="service4_item">590.000₫</div>
+            <div class="service4_item_detail">
+              <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
               </div>
-              <div class="pic_service5_item_detail--shop">
+              <div class="service4_item_detail--shop">
                 <i class="fa-solid fa-cart-shopping"> </i>
               </div>
-              <div class="pic_service5_item_detail--plus">
+              <div class="service4_item_detail--plus">
                 <i class="fa-solid fa-magnifying-glass-plus"> </i>
               </div>
             </div>
           </div>
-          <div class="pic_service5">
+          <div class="service4">
             <img src="./assets/img/lacbac4s3.webp" alt="" />
-            <div class="pic_service5_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="pic_service5_item">590.000₫</div>
-            <div class="pic_service5_item_detail">
-              <div class="pic_service5_item_detail--heart">
+            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
+            <div class="service4_item">590.000₫</div>
+            <div class="service4_item_detail">
+              <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
               </div>
-              <div class="pic_service5_item_detail--shop">
+              <div class="service4_item_detail--shop">
                 <i class="fa-solid fa-cart-shopping"> </i>
               </div>
-              <div class="pic_service5_item_detail--plus">
+              <div class="service4_item_detail--plus">
                 <i class="fa-solid fa-magnifying-glass-plus"> </i>
               </div>
             </div>
           </div>
-          <div class="service_arrow service3_arrow_left">
+          <div class="service4_arrow service4_arrow_left">
             <i class="fa-solid fa-chevron-left"></i>
           </div>
-          <div class="service_arrow service3_arrow_right">
+          <div class="service4_arrow service4_arrow_right">
             <i class="fa-solid fa-chevron-right"></i>
           </div>
         </div>
