--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
         <div class="container4_item">
           <div class="service4">
             <img src="./assets/img/lacbac1s3.webp" alt="" />
-            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="service4_item">590.000₫</div>
+            <div class="service4_item">
+              <p>N BIG CIRCLE GEM LAUREL</p>
+              <p>590.000₫</p>
+            </div>
+
             <div class="service4_item_detail">
               <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
@@ -193,10 +196,14 @@
               </div>
             </div>
           </div>
-          < <div class="service4">
+        
+          <div class="service4">
             <img src="./assets/img/lacbac2s3.webp" alt="" />
-            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="service4_item">590.000₫</div>
+            <div class="service4_item">
+              <p>N BIG CIRCLE GEM LAUREL</p>
+              <p>590.000₫</p>
+            </div>
+
             <div class="service4_item_detail">
               <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
@@ -211,8 +218,11 @@
           </div>
           <div class="service4">
             <img src="./assets/img/lacbac4s3.webp" alt="" />
-            <div class="service4_item">N BIG CIRCLE GEM LAUREL</div>
-            <div class="service4_item">590.000₫</div>
+            <div class="service4_item">
+              <p>N BIG CIRCLE GEM LAUREL</p>
+              <p>590.000₫</p>
+            </div>
+
             <div class="service4_item_detail">
               <div class="service4_item_detail--heart">
                 <i class="fa-solid fa-heart"> </i>
@@ -225,11 +235,12 @@
               </div>
             </div>
           </div>
-          <div class="service4_arrow service4_arrow_left">
+          <div class="service2_arrow service2_arrow_left">
             <i class="fa-solid fa-chevron-left"></i>
           </div>
-          <div class="service4_arrow service4_arrow_right">
+          <div class="service2_arrow service2_arrow_right">
             <i class="fa-solid fa-chevron-right"></i>
+          </div>
           </div>
         </div>
       </section>
