--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
           </div>
           </div>
         </div>
+        <!-- bodyline -->
+        <div class="body_line"></div>
       </section>
     </section>
 
