--- a/index.html
+++ b/index.html
@@ -310,9 +310,83 @@
           <h2>Follow On Instagram #Katjewelry</h2>
           <a href="#">Visit Instagram Page</a>
         </div>
+        <div class="service7">
+          <div class="service7_left">
+            <div class="service7_left-item">
+              <img src="./assets/img/container7s1.webp" alt="" />
+            </div>
+            <div class="service7_left-item">
+              <img src="./assets/img/container7s2.webp" alt="" />
+            </div>
+            <div class="service7_left-item">
+              <img src="./assets/img/container7s3.webp" alt="" />
+            </div>
+            <div class="service7_left-item">
+              <img src="./assets/img/container7s4.webp" alt="" />
+            </div>
+          </div>
+          <div class="service7_middle">
+            <img src="./assets/img/container7center.webp" alt="" />
+          </div>
+          <div class="service7_right">
+            <div class="service7_right-item">
+              <img src="./assets/img/container7s5.webp" alt="" />
+            </div>
+            <div class="service7_right-item">
+              <img src="./assets/img/container7s6.webp" alt="" />
+            </div>
+            <div class="service7_right-item">
+              <img src="./assets/img/container7s7.webp" alt="" />
+            </div>
+            <div class="service7_right-item">
+              <img src="./assets/img/container7s8.webp" alt="" />
+            </div>
+          </div>
+        </div>
       </section>
     </section>
 
     <!-- footer -->
+
+    <footer>
+      <div class="footer_logo">
+        <img src="./assets/img/received_154839477565772.webp" alt="" />
+      </div>
+      <ul class="home-list">
+        <li class="home-list-item">
+          <a href="#"> TRANG CHỦ </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> TRANG SỨC </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> INSTAGRAM </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> BỘ SƯU TẬP </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> BÀI VIẾT </a></li>
+        <li class="home-list-item"><a href="#"> THÔNG TIN </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> JEWELRY </a>
+        </li>
+        <li class="home-list-item">
+          <a href="#"> LIÊN HỆ </a>
+        </li>
+      </ul>
+
+      <ul class="contact-list">
+        <li class="contact-list-item">
+          
+        </li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </footer>
   </body>
 </html>
