--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="icon"
+      href="./assets/img/received_154839477565772.webp"
+      type="image/x-icon"
+    />
   </head>
 
   <body>
