--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Katjewlry</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/base.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -87,7 +88,11 @@
           Jewelry for women
           <div class="nav_item_select--forwomen">
             <ul class="select_list">
-              <li class="select_item">1</li>
+              <li class="select_item">
+                <a href="./detail.html">
+                  detail
+                </a>
+              </li>
               <li class="select_item">2</li>
               <li class="select_item">3</li>
               <li class="select_item">4</li>
