--- a/detail.html
+++ b/detail.html
@@ -115,7 +115,7 @@
     <div class="banner">
       <img src="./assets/img/received_1336054277306960.jpeg" alt="" />
     </div>
-
+    
     <!-- body -->
     <section class="body">
       <div class="home">
@@ -366,5 +366,104 @@
         <a href="#"><i class="fa-solid fa-angle-right"></i></a>
       </div>
     </section>
+    <footer>
+      <div class="footer_logo">
+        <img src="./assets/img/received_154839477565772.webp" alt="" />
+      </div>
+      <div class="footer-list">
+        <ul class="home-list">
+          <li class="home-list-item">
+            <a href="#"> TRANG CHỦ </a>
+          </li>
+          <li class="home-list-item">
+            <a href="#"> TRANG SỨC </a>
+          </li>
+          <li class="home-list-item">
+            <a href="#"> INSTAGRAM </a>
+          </li>
+          <li class="home-list-item">
+            <a href="#"> BỘ SƯU TẬP </a>
+          </li>
+          <li class="home-list-item">
+            <a href="#"> BÀI VIẾT </a>
+          </li>
+          <li class="home-list-item"><a href="#"> THÔNG TIN </a></li>
+          <li class="home-list-item">
+            <a href="#"> JEWELRY </a>
+          </li>
+          <li class="home-list-item">
+            <a href="#"> LIÊN HỆ </a>
+          </li>
+        </ul>
+
+        <ul class="contact-list-left contact-list">
+          <li class="contact-list-item">
+            <i class="fa-solid fa-house"></i>
+            KATJEWELRY
+          </li>
+          <li class="contact-list-item">
+            <i class="fa-brands fa-facebook"></i>
+            <a href="#"> /KATJEWELRY </a>
+          </li>
+          <li class="contact-list-item">
+            <i class="fa-solid fa-phone"></i>
+            <a href="tel:999999999"> 999999999 </a>
+          </li>
+          <li class="contact-list-item">
+            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:qweuqweu@gmail.com"> contact@katjewelry.vn </a>
+          </li>
+          <li class="contact-list-item">
+            <img src="./assets/img/dathongbaoboconthuong.webp" alt="" />
+          </li>
+          <li class="contact-list-item">
+            <img src="./assets/img/dmcaprotected.png" alt="" />
+          </li>
+        </ul>
+
+        <div class="center">
+          <p class="name">JEWELRY STORE IN SAIGON</p>
+          <p class="since">DESIGN & MADE TO ORDER</p>
+          <p>Since 2012</p>
+        </div>
+
+        <ul class="contact-list-right contact-list">
+          <li class="contact-list-item location">
+            <i class="fa-solid fa-location-dot"></i>
+            HỒ CHÍ MINH
+          </li>
+          <li class="contact-list-item">450 Hai Bà Trưng, Quận 1</li>
+          <li class="contact-list-item">215 Võ Văn Ngân, Thủ Đức</li>
+          <li class="contact-list-item">213A Nguyễn Trãi, P.2, Quận 5</li>
+          <li class="contact-list-item">99 Lê Văn Sỹ, P.13, Phú Nhuận</li>
+          <li class="contact-list-item">
+            197 Nguyễn Gia Trí (D2), Quận Bình Thạnh
+          </li>
+          <li class="contact-list-item">678 Nguyễn Đình Chiểu, P.3, Quận 3</li>
+          <li class="contact-list-item">179A Cách Mạng Tháng 8, P.5, Q.3</li>
+          <li class="contact-list-item">391 Nguyễn Thị Thập, Quận 7</li>
+          <li class="contact-list-item">529 Quang Trung, P.10, Gò Vấp</li>
+          <li class="contact-list-item">117 Cây Keo, P Hiệp Tân, Q Tân Phú</li>
+
+          <li class="contact-list-item location">
+            <i class="fa-solid fa-location-dot"></i>ĐÀ NẴNG
+          </li>
+          <li class="contact-list-item">230 Lê Duẩn, Thanh Khê, Đà Nẵng</li>
+
+          <li class="contact-list-item location">
+            <i class="fa-solid fa-location-dot"></i>HÀ NỘI
+          </li>
+          <li class="contact-list-item">
+            52 Tràng Thi, P.Hàng Bông, Q.Hoàn Kiếm
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        © Bản quyền thuộc về
+        <span>qweasd</span>
+        | Cung cấp bởi
+        <span>wwetey</span>
+      </div>
+    </footer>
   </body>
 </html>
