--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Katjewlry</title>
-    <link rel="stylesheet" href="./assets/css/signin.css" />
+    <title>katjewelry</title>
+    <link rel="stylesheet" href="./assets/css/contact.css" />
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link
       rel="stylesheet"
@@ -20,6 +20,7 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header>
       <div class="header_left">
         <div class="icon_left">
@@ -85,7 +86,9 @@
           Jewelry for women
           <div class="nav_item_select--forwomen">
             <ul class="select_list">
-              <li class="select_item">1</li>
+              <li class="select_item">
+                <a href="./detail.html"> detail </a>
+              </li>
               <li class="select_item">2</li>
               <li class="select_item">3</li>
               <li class="select_item">4</li>
@@ -112,52 +115,179 @@
         </li>
       </ul>
     </nav>
+
+    <!-- body -->
     <div class="banner">
       <img src="./assets/img/received_1336054277306960.jpeg" alt="" />
     </div>
 
-    <div class="main">
-      <div class="home">
-        <i class="fa-solid fa-house"></i>
-        <p>TRANG CHỦ / ĐĂNG NHẬP TÀI KHOẢN</p>
-      </div>
-      <div class="signin">
-        <div class="login">
-          <div class="title">Đăng nhập tài khoản</div>
-          <p>Nếu bạn đã có tài khoản, đăng nhập tại đây.</p>
-          <div class="email">
-            <div class="detail">
-              Email
-              <i class="fa-solid fa-star"></i>
-            </div>
-            <input type="email" placeholder="Email" />
-          </div>
-          <div class="password">
-            <div class="detail">
-              password
-              <i class="fa-solid fa-star"></i>
-            </div>
-            <input type="password" placeholder="Mật khẩu" />
-          </div>
-          <div class="login-btn">
-            <button>Đăng nhập</button>
-            <a href="#"> Đăng ký </a>
+    <div class="title">
+      <i class="fa-solid fa-house"></i>
+      <p>
+        <a href="./index.html"> TRANG CHỦ </a>
+        / ĐỊA CHỈ LIÊN HỆ TRANG SỨC BẠC KAT JEWELRY
+      </p>
+    </div>
+
+    <div class="content-map">
+      <div class="content-map-item">
+        <div class="content-map-left">
+          <i class="fa-solid fa-toggle-off"></i>
+          <i class="fa-solid fa-poo"></i>
+        </div>
+
+        <div class="content-map-left content-map-left-text">
+          <div class="kobietdattenmegi">KaT Jewelry</div>
+          <div class="kobietdattenmegi">kaT Jewelry</div>
+          <div class="kobietdattenmegi">
+            Bản đồ này được tạo bằng Google My Maps.
+            <a href="#"> Tạo bản đồ của riêng bạn. </a>
           </div>
         </div>
-        <div class="forgot">
-          <p>
-            Bạn quên mật khẩu? Nhập địa chỉ email để lấy lại mật khẩu qua email.
-          </p>
-          <div class="forgot-email">
-            <div>Email</div>
-            <input type="email" placeholder="Email" />
-          </div>
-          <div class="forgot-btn">
-            <button>Lấy lại mật khẩu</button>
-          </div>
+      </div>
+      <div class="content-map-item">
+        <div class="content-map-right">
+          <i class="fa-solid fa-share-nodes"></i>
+        </div>
+        <div class="content-map-right">
+          <i class="fa-solid fa-expand"></i>
         </div>
       </div>
     </div>
+
+    <div class="map">
+      <img src="./assets/img/bando.png" alt="ban do" />
+    </div>
+
+    <!-- middle sau cai map -->
+    <section class="middle">
+      <h4>-- Hãy luôn độc nhất và khác biệt --</h4>
+      <div class="middle-item contact">
+        <div class="contact-item">
+          Hotline:
+          <a href="tel:999999999"> 999999999 </a>
+        </div>
+        <div class="contact-item">
+          Email:
+          <a href="mailto:qweuqweu@gmail.com"> contact@katjewelry.vn </a>
+        </div>
+      </div>
+      <div class="middle-item introduce">
+        <div class="introduce-item">
+          <i class="fa-solid fa-check"></i>
+          <p>
+            Thương hiệu đã được đăng kí bởi cục sở hữu trí tuệ và được bảo hộ
+            bởi pháp luật Việt Nam
+          </p>
+        </div>
+        <div class="introduce-item">
+          <i class="fa-solid fa-check"></i>
+          <p>
+            HOÀN TIỀN GẤP 5 LẦN nếu bạc không đủ tiêu chuẩn 925, hỗ trợ khách
+            kiểm định (tính phí)
+          </p>
+        </div>
+        <div class="introduce-item">
+          <i class="fa-solid fa-check"></i>
+          <p>
+            Chất lượng được chứng minh bởi hơn 150.000 khách hàng trong 10 năm
+            qua!
+          </p>
+        </div>
+        <div class="introduce-item">
+          <i class="fa-solid fa-check"></i>
+          <p>
+            Hãy chọn cho mình 1 thương hiệu trang sức bạc 925 uy tín và lâu đời
+            để luôn chắc rằng trang sức của bạn được bảo hành trắng sáng MIỄN
+            PHÍ VĨNH VIỄN.
+          </p>
+        </div>
+      </div>
+      <div class="middle-line"></div>
+      <div class="middle-item shops">
+        <h4>KAT JEWELRY CÓ 12 CỬA HÀNG</h4>
+        <p>--------- 10 Cửa Hàng Tại TP HỒ CHÍ MINH ---------</p>
+        <p>1. KaT Jewelry Q1: 450 Hai Bà Trưng, P. Tân Định, Quận 1</p>
+        <p>2. KaT Jewelry Q3: 678 Nguyễn Đình Chiểu, P.3, Quận 3</p>
+        <p>
+          3. KaT Jewelry quận 3: 179B Cách mạng tháng 8, P. 5, Q. 3. (Đoạn giữa
+          Nguyễn Đình Chiểu và Võ Văn Tần).
+        </p>
+        <div class="shops-item">
+          <img src="./assets/img/contacthinh1.webp" alt="" />
+        </div>
+        <div class="middle-line"></div>
+        <p>4. KaT Jewelry Phú Nhuận: 99 Lê Văn Sỹ, P. 14, Q. Phú Nhuận.</p>
+        <p>
+          5. KaT Jewelry Nguyễn Trãi Q5: 213A Nguyễn Trãi, P2, Quận 5 (giữa Lê
+          Hồng Phong và Huỳnh Mẫn Đạt).
+        </p>
+        <div class="shops-item">
+          <img src="./assets/img/contacthinh2.webp" alt="" />
+        </div>
+        <div class="middle-line"></div>
+        <p>
+          6. KaT Jewelry Gò Vấp: 529 Quang Trung, P. 10, Q. Gò Vấp (Đoạn gần
+          Thống Nhất).
+        </p>
+        <div class="shops-item">
+          <img src="./assets/img/contacthinh3.webp" alt="" />
+        </div>
+        <div class="middle-line"></div>
+        <p>
+          7. KaT Jewelry Tân Phú: 117 Cây Keo, Phường Hiệp Tân, Quận Tân Phú
+          (song song đường Hòa Bình).
+        </p>
+        <div class="shops-item">
+          <img src="./assets/img/contacthinh4.webp" alt="" />
+        </div>
+        <div class="middle-line"></div>
+        <p>
+          8. KaT Jewelry D2: 197 Nguyễn Gia Trí (D2), Phường 25, Quận Bình
+          Thạnh.
+        </p>
+        <p>9. KaT Jewelry Q7: 391 Nguyễn Thị Thập, Phường Tân Phong, Quận 7.</p>
+        <p>
+          10. KaT Jewelry Thủ Đức: 215 Võ Văn Ngân, Phường Linh Chiểu, Quận Thủ
+          Đức, Tp Thủ Đức.
+        </p>
+        <div class="middle-line"></div>
+        <p>--------- 1 Cửa Hàng Tại ĐÀ NẴNG ---------</p>
+        <p>8. KaT Jewelry Lê Duẩn: 230 Lê Duẩn, Q. Thanh Khê</p>
+        <p>--------- 1 Cửa Hàng Tại HÀ NỘI ---------</p>
+        <p>
+          9. KaT Jewelry Hoàn Kiếm: 52 Tràng Thi, P. Hàng Bông, Q. Hoàn Kiếm.
+          (Ngay góc Hội Vũ - Tràng Thi). SDT:
+          <a href="tel:999999999">1111111111</a>
+        </p>
+        <div class="shops-item">
+          <img src="./assets/img/contacthinh5.webp" alt="" />
+        </div>
+        <div class="middle-line"></div>
+      </div>
+      <div class="send-contact-infor">
+        <h2>Gửi thông tin liên hệ</h2>
+        <form class="send-contact-infor-item">
+          <input type="text" placeholder="Họ Tên&#42;" />
+          <input type="email" placeholder="Email&#42;" />
+        </form>
+        <form class="send-contact-infor-item">
+          <input type="text" placeholder="Địa chỉ&#42;" />
+          <input type="tel" placeholder="Điện thoại&#42;" />
+        </form>
+        <fieldset>
+          <textarea
+            placeholder="Nhập nội dung"
+            name="ten"
+            id="comment"
+            cols="153"
+            rows="6"
+          >
+          </textarea>
+        </fieldset>
+        <button>Gửi liên hệ</button>
+      </div>
+    </section>
     <footer>
       <div class="footer_logo">
         <img src="./assets/img/received_154839477565772.webp" alt="" />
