--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,7 @@
       <img src="./assets/img/received_1336054277306960.jpeg" alt="" />
     </div>
 
+
     <div class="title">
       <i class="fa-solid fa-house"></i>
       <p>
@@ -276,14 +277,7 @@
           <input type="tel" placeholder="Điện thoại&#42;" />
         </form>
         <fieldset>
-          <textarea
-            placeholder="Nhập nội dung"
-            name="ten"
-            id="comment"
-            cols="153"
-            rows="6"
-          >
-          </textarea>
+          <textarea name="ko" id="ko" cols="153" rows="6" placeholder="Nhập nội dung&#42;"></textarea>
         </fieldset>
         <button>Gửi liên hệ</button>
       </div>
